Prevent stretching

--- a/src/index.less
+++ b/src/index.less
@@ -114,8 +114,15 @@ li {
 .work {
     flex: 1 100%;
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.work .container {
+    flex: 0 0 100%;
+    display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 123.9vh;
 }
 .title {
     font-weight: bold;
